# pastasoss

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  environment.yml  pastasoss-environment-3.10.yml  pastasoss-environment-3.11.yml  pastasoss-environment-3.9.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
notebooks/: jw01512001001_03102_00001_nis_demo_pwcpos_245.778671.npy  pastasoss_demo.ipynb
pastasoss/: __init__.py  pipeline.py  soss_traces.py  soss_wavemaps.py  wavecal.py
pastasoss/data/: jw_soss_order1_refmodel.txt  jwst_niriss_gr700xd_order1_trace_refmodel.txt  jwst_niriss_gr700xd_order2_trace_refmodel.txt  jwst_niriss_gr700xd_order2_trace_refmodel_002.txt  jwst_niriss_gr700xd_wavelength_model_order1.json  jwst_niriss_gr700xd_wavelength_model_order2.json  jwst_niriss_gr700xd_wavelength_model_order2_002.json  jwst_niriss_spectrace_template.fits
pastasoss/tests/: test_pastasoss.py
tests/: test_pastasoss.py
